--- a/src/components/organisms/styles.scss
+++ b/src/components/organisms/styles.scss
@@ -10,3 +10,8 @@
     padding: 1rem;
     max-width: 1200px;
 }
+@media only screen and (min-width: 1200px) {
+    .organizationContainer {
+        min-width: 1100px;
+    }
+  }
